--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<html>
+<body>
+	Hello World
+	<script type="text/javascript">
+  window.ProtoSettings = {
+    gwId: 'gw_RbaXLYZsbDkdR12k1',
+    env: 'dev',
+    onLoad: function() { Proto.show(); }
+  };
+
+  var d=document,s=d.createElement("script");
+  s.type="text/javascript",s.async=true,s.src="https://app.dev.proto.cx/webchat/client.js";
+  var t=d.getElementsByTagName("script")[0];
+  t.parentNode.insertBefore(s,t);
+  s.addEventListener("load", function() {
+    var p = window.ProtoSettings; Proto.init(p, p.onLoad);
+  });
+</script>
+
+</body>
+</html>
