--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
 <body>
 	Hello World
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-209090295-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-209090295-1');
+</script>
+
+
 	<script type="text/javascript">
   window.ProtoSettings = {
     gwId: 'gw_RbaXLYZsbDkdR12k1',
